--- a/static/index.css
+++ b/static/index.css
@@ -1,6 +1,15 @@
 body{
-    background-color: grey;
+    background-image: url("http://yeisystems.com/wp-content/uploads/2015/05/Dark-Grey-Background-Best-Wallpaper-Gallery-dji6x-Free.jpg");
     text-align: center
+}
+
+h2{
+    color: black;
+}
+
+p{
+    color: black;
+    font-size: 14px;
 }
 /* The Modal (background) */
 .modal {
@@ -18,18 +27,18 @@ body{
 
 /* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    background-color: grey;
+    margin: 5% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 70%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
 .close {
     color: #aaa;
-    float: right;
-    font-size: 28px;
+    float: left;
+    font-size: 32px;
     font-weight: bold;
 }
 
@@ -38,4 +47,15 @@ body{
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+#navbarboys{
+    border: 0px;
+}
+
+.container-fluid{
+    background-color: black;
+}
+.navbar-header{
+    float: right;
 }
